<resources>
    <string name="app_name">GBMaterialDesign</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="day_before_yesterday">Позавчера</string>
    <string name="yesterday">Вчера</string>
    <string name="Today">Сегодня</string>
    <string name="input_text">Введите слово</string>
    <string name="reload">Попробовать еще раз</string>
    <string name="action_favorite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="system">System</string>
    <string name="home">Home</string>
    <string name="image">image</string>
    <string name="rover">rover</string>
    <string name="camera">camera</string>
    <string name="hide_3_button_using_groups">hide 3 button using groups</string>
    <string name="system_fragment">System Fragment</string>
    <string name="nasa_list">Nasa</string>
</resources>