<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.SettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Themes" />

    <RadioGroup
        android:id="@+id/group_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/main_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Main Theme" />

        <RadioButton
            android:id="@+id/app_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Custom App Theme" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:id="@+id/day_before_yesterday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/day_before_yesterday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/yesterday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/yesterday" />

            <com.google.android.material.chip.Chip
                android:id="@+id/today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/Today" />
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_text"
                android:minHeight="48dp" />
        </com.google.android.material.textfield.TextInputLayout>
    </RadioGroup>
</LinearLayout>