<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Mars.MarsFragment">

    <TextView
        android:id="@+id/marsRover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintStart_toEndOf="@id/barrierFirst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.example.gbmaterialdesign.ui.utils.MyImageView
        android:id="@+id/marsPicture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrierFirst"
        app:layout_constraintTop_toBottomOf="@+id/marsRover"
        app:layout_constraintBottom_toTopOf="@id/barrierSecond"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/barrierFirst"
        app:constraint_referenced_ids="imageButton, roverButton, solButton"
        />


    <Button
        android:id="@+id/imageButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintWidth_percent="0.3"
        android:text="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/roverButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageButton"
        />

    <Button
        android:id="@+id/solButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roverButton"
        />

    <Button
        android:id="@+id/hideButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hide_3_button_using_groups"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/solButton"
        app:layout_constraintBottom_toTopOf="@id/barrierSecond"
        app:layout_constraintWidth_percent="0.3"
        />



    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="imageButton, roverButton, solButton, hideButtons"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="imageButton, roverButton, solButton, hideButtons"

        />

    <TextView
        android:id="@+id/marsDescription"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrierSecond"
        app:layout_constraintStart_toEndOf="@id/barrierFirst"
        />



    <FrameLayout
        android:id="@+id/frameLoadingMars"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>